# EvolOsProject

./: LICENSE  README.md
.github/workflows/: mirror.yml
buttons/: .gitignore  Button.cpp  CMakeLists.txt  MyWindow.cpp
buttons/cta/: CTAButton.cpp  main.cpp
buttons/include/: MyWindow.hpp
buttons/include/buttons/: Button.hpp  CTAButton.hpp
buttons/ui/: CTAButton.ui
buttons/ui/css/: CTAButton.css
